name:                KeyWar
version:             0.1.0.0
synopsis:            Twitch Overlay
description:         Twitch Overlay displaying what you are typing.
homepage:            https://github.com/githubuser/KeyWar#readme
license:             GPL-3
license-file:        LICENSE
author:              Félix Baylac-Jacqué  
maintainer:          felix@alternativebit.fr
copyright:           2017 Félix Baylac-Jacqué
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Display,
                       Events,
                       World,
                       Update,
                       Consts
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       text
  default-language:    Haskell2010

executable keywar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
  build-depends:       base
                     , KeyWar
                     , gloss
  default-language:    Haskell2010

test-suite KeyWar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , KeyWar
                     , gloss
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/KeyWar
